# LSPosed

./: .gitignore  .gitmodules  Android.bp  README.md  build.gradle.kts  dand.sh  empty_manifest.xml  exclude_android_mk.sh  gradle.properties  settings.gradle.kts  test.sh
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
core/: Android.bp  build.gradle.kts  proguard-rules.pro
core/src/main/jni/: CMakeLists.txt
daemon/: build.gradle.kts  proguard-rules.pro
daemon/src/main/jni/: CMakeLists.txt  dex2oat.cpp  logcat.cpp  logging.h  obfuscation.cpp  obfuscation.h
dex2oat/: Android.bp  build.gradle.kts
dex2oat/src/main/cpp/: dex2oat.c  logging.h
framework_loader/: Android.bp
framework_loader/jni/: CMakeLists.txt
framework_loader/jni/include/: loader.h
framework_loader/jni/src/: config_impl.h  dand_loader.cpp  dand_loader.h  service.cpp  service.h
framework_loader/jni/template/: loader.cpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hiddenapi/bridge/: build.gradle.kts
hiddenapi/stubs/: build.gradle.kts
libdandroidapi/: build.gradle.kts  proguard-rules.pro
libdandroidcompat/: build.gradle  build.gradle.kts
libdandroidservice/: build.gradle.kts
libdandroidservice/src/main/: AndroidManifest.xml
magisk-loader/: build.gradle.kts  proguard-rules.pro
magisk-loader/magisk_module/: customize.sh  daemon  module.prop  post-fs-data.sh  service.sh  uninstall.sh  util_functions.sh  verify.sh
magisk-loader/src/main/: AndroidManifest.xml
services/daemon-service/: build.gradle.kts
services/manager-service/: build.gradle.kts
(+403 files in other folders)
